@@ -1,3 +1,4 @@
 class Sys::IO::DirStream : pointer_t {
+  has closed : ro int;
   native method DESTROY : void ();
 }
