@@ -1,6 +1,8 @@
 0.35 2022-01-06
   [Prerequirement Changes]
     * SPVM 0.9679+ is needed.
+  [New Features]
+    * Added the closed field in the Sys::IO::DirStream class.
 0.34 2022-12-26
   [Prerequirement Changes]
     * SPVM 0.9677+ is needed.
